<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bac_dim_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/perksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/perks_per_level"
            android:textAlignment="center"
            android:textColor="@color/colorFont"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/perksValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/perksTitle"
            android:textColor="@color/colorFont" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/perksSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="49"
        android:progressTint="@color/colorAccent"
        android:thumbTint="@color/colorAccent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorGray">

        <TextView
            style="@style/RadioGroupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vampire_perks" />

        <RadioButton
            android:id="@+id/radio_vampire_vanilla"
            style="@style/RadioButton"
            android:text="@string/s_vanilla" />

        <RadioButton
            android:id="@+id/radio_vampire_sacrosanct"
            style="@style/RadioButton"
            android:text="@string/s_sacrosanct" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorGray">

        <TextView
            style="@style/RadioGroupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/werewolf_perks" />

        <RadioButton
            android:id="@+id/radio_were_vanilla"
            style="@style/RadioButton"
            android:text="@string/s_vanilla" />

        <RadioButton
            android:id="@+id/radio_were_growl"
            style="@style/RadioButton"
            android:text="@string/s_growl" />

    </RadioGroup>

</LinearLayout>


