<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bac_dim_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/colorGrayDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/perksTitle"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perks_per_level"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorFont" />

        <TextView
            android:id="@+id/perksValue"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/perksTitle"
            android:textColor="@color/colorFont" />


    </RelativeLayout>

    <SeekBar
        android:id="@+id/perksSeekbar"
        android:max="49"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />


    <RadioGroup
        android:background="@color/colorGrayDark"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="Vampire perks"
            style="@style/RadioStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_vampire_vanilla"
            android:text="@string/s_vanilla"
            style="@style/RadioStyle"
            />

        <RadioButton
            android:id="@+id/radio_vampire_sacrosanct"
            android:text="@string/s_sacrosanct"
            style="@style/RadioStyle"
            />

    </RadioGroup>

    <RadioGroup
        android:background="@color/colorGrayDark"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"

        android:layout_height="wrap_content">

        <TextView
            android:text="Werewolf perks"
            style="@style/RadioStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <RadioButton
            android:id="@+id/radio_were_vanilla"
            android:text="@string/s_vanilla"
            style="@style/RadioStyle"
            />

        <RadioButton
            android:id="@+id/radio_were_growl"
            android:text="@string/s_growl"
            style="@style/RadioStyle"
            />

    </RadioGroup>

</LinearLayout>


