<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <com.google.android.material.tabs.TabLayout

        android:background="@android:color/black"
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:tabMode="scrollable">

    </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.pawels96.skyrimperkcalculator.presentation.views.LoopingViewPager
        android:layout_below="@id/appbar"
        android:layout_above="@id/textViews"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.pawels96.skyrimperkcalculator.presentation.views.LoopingViewPager>


    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_above="@id/buttons"
        android:layout_marginBottom="15dp"
        android:id="@+id/textViews"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorFont"
            android:id="@+id/allPerks"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colorFont"
            android:textAlignment="center"

            android:id="@+id/reqLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/round_backgr"
            android:focusable="false"
            android:text="@string/builds"
            android:textAllCaps="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:theme="@style/colorControlHighlight_blue"
            android:textColor="@color/colorFont"
            android:layout_marginEnd="15dp"
            android:id="@+id/loadButton"
            android:layout_toStartOf="@id/skillsButton"

            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <Button
            android:background="@drawable/round_backgr"
            android:text="@string/skills"
            android:textAllCaps="true"
            android:textColor="@color/colorFont"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:theme="@style/colorControlHighlight_blue"
            android:layout_centerHorizontal="true"

            android:id="@+id/skillsButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <Button
            android:text="@string/options"
            android:textAllCaps="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:theme="@style/colorControlHighlight_blue"
            android:textColor="@color/colorFont"
            android:layout_toEndOf="@id/skillsButton"
            android:layout_marginStart="15dp"
            android:background="@drawable/round_backgr"
            android:id="@+id/optionsButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp" />



    </RelativeLayout>
</RelativeLayout>